tdf#89867: editeng: fix crash on shutdown after changing AutoCorrect options

Since commit 5bff4b016c4b44f4123e0e6a4fd4c0c4dc0cfa2d the
SvxAutoCorrCfg::pAutoCorrect is cleared by one terminate() listener but
then another terminate() listener calls Commit() on all modified
utl::ConfigItem and these two have a Commit() that does not clear the
modified flag so they are always modified.

Sadly there's no non-virtual Commit() wrapper that
calls ClearModified() on the base class...

Change-Id: I9ae220d78bb109c7bf0fdc544754a0686b357115